<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="256dp"
    android:layout_height="256dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmlog"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:padding="8dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/TV_EmpIDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idnum"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/TV_EmpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/TV_EmpLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlack"/>

        <Button
            android:id="@+id/Btn_Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>