<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ScanActivity">

    <TextView
        android:id="@+id/TV_Status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <SurfaceView
        android:id="@+id/Camera_QR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/TV_QRInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="14dp"
        android:text="@string/scanidhere"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/Btn_ForgotID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotid"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>
