<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="256dp"
    android:layout_height="280dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:padding="8dp"
        android:background="@color/colorWhite">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branchid"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/BranchID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:inputType="number"/>-->

        <Button
            android:id="@+id/Btn_SyncData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syncdata"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/Btn_SendDTR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/senddtr"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/Btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/TV_RegisteredLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/colorGray"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>