<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGray"
    android:layout_margin="2dp"
    android:padding="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:id="@+id/TV_EmpIDN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/timein"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/breakout"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/breakin"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:id="@+id/TVLbl_TimeOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/timeout"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@color/colorDarkGray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_TimeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:id="@+id/TV_BreakOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:id="@+id/TV_BreakIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

        <TextView
            android:id="@+id/TV_TimeOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="2dp"
            android:background="@color/colorDarkGray"/>

    </LinearLayout>

</LinearLayout>