<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eferm.edtr.MainActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/Btn_Settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_settings"
        android:onClick="Btn_Click"/>

    <TextView
        android:id="@+id/TV_DateTime"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="end"
        android:padding="6dp"
        android:text="@string/placeholder"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@+id/TV_DateTime"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/currentDate"/>

        <TextView
            android:id="@+id/Btn_CurrentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/placeholder"
            android:background="@color/colorPrimaryDark"
            android:onClick="DatePicker"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_DeviceStatus"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/RV_DTRView"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RV_DTRView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="2dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/BtnLayout_Ins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/BtnLayout_Outs">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/Btn_TimeIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="12"
            android:layout_margin="2dp"
            android:background="@drawable/btn_drawable_rounded_green"
            android:onClick="Btn_Click">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timein"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Btn_BreakIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="12"
            android:layout_margin="2dp"
            android:background="@drawable/btn_drawable_rounded_green"
            android:onClick="Btn_Click">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/breakin"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BtnLayout_Outs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/Btn_BreakOut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="12"
            android:layout_margin="2dp"
            android:background="@drawable/btn_drawable_rounded_red"
            android:onClick="Btn_Click">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/breakout"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Btn_TimeOut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="12"
            android:layout_margin="2dp"
            android:background="@drawable/btn_drawable_rounded_red"
            android:onClick="Btn_Click">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timeout"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/BtnLayout_Outs">

        <ImageView
            android:layout_width="92dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_logo"
            android:padding="2dp"
            android:background="@drawable/background_oval_white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_Screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/initial"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
